# lerpz-rs

./: .env.template  .gitignore  Cargo.toml  LICENSE  Untitled Diagram.drawio  docker-compose.yml
crates/libs/auth/: Cargo.toml
crates/libs/auth/src/: hashing.rs  jwt.rs  lib.rs
crates/libs/auth/src/jwt/: claims.rs  decode.rs  encode.rs  keys.rs  mod.rs
crates/libs/auth/src/token/: claims.rs  decode.rs  encode.rs  keys.rs  mod.rs
crates/libs/core/: Cargo.toml
crates/libs/core/src/: database.rs
crates/libs/core/src/models/: user.rs
crates/libs/grpc/: build.rs
crates/libs/grpc/proto/: helloworld.proto
crates/libs/rpc/: Cargo.toml  build.rs
crates/libs/rpc/proto/account/: account.proto
crates/libs/utils/: Cargo.toml
crates/libs/utils/src/: env.rs
crates/services/account-server/: Cargo.toml
crates/services/account-server/src/: account.rs  auth.rs  main.rs
crates/services/client/: Cargo.toml
crates/services/client/src/: main.rs
crates/services/server/: Cargo.toml
crates/services/server/src/: main.rs
crates/services/web-server/: Cargo.toml
crates/services/web-server/src/: api_doc.rs  auth.rs  config.rs  context.rs  error.rs  main.rs  middleware.rs
crates/services/web-server/src/controllers/: auth.rs
crates/services/web-server/src/middleware/: auth.rs
