[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", default-features = false, optional = true }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono", "migrate", "macros", "uuid"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
