[package]
name = "account-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# - Local
auth = { path = "../../libs/auth", features = ["hashing"] }
rpc = { path = "../../libs/rpc", features = ["server"] }
# - Async
tonic = "0.10.2"
tonic-health = "0.10.2"
tokio = { version = "1.35.1", features = ["full"] }
