[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
auth = { path = "../../libs/auth" }
grpc = { path = "../../libs/grpc" }
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["tokio"] }
uuid = { version = "1.6", features = ["v4", "fast-rng", "macro-diagnostics"] }
tonic = "0.10"
prost = "0.12"

[build-dependencies]
tonic-build = "0.10"
