[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# -- Local libs
auth = { path = "../../libs/auth" }
rpc = { path = "../../libs/rpc" }
utils = { path = "../../libs/utils" }
# -- Web
axum = { version = "0.7", features = ["tokio"] }
utoipa = { version = "4.2", features = ["uuid", "chrono"] }
utoipa-swagger-ui = "6.0"
# -- Async
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["full"] }
futures-util = "0.3"
# -- Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
# -- Other
serde = "1.0"
tower-cookies = "0.10.0"
