[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# -- Local
auth = { path = "../../libs/auth", features = ["token"] }
rpc = { path = "../../libs/rpc", features = ["client"] }
utils = { path = "../../libs/utils" }
# -- Web
axum = { version = "0.7", features = ["tokio"] }
utoipa = { version = "4.2", features = ["uuid", "chrono"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
# -- Async
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-cookies = "0.10"
tower-http = { version = "0.5", features = ["full"] }
futures-util = "0.3"
# -- Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
# -- Json
serde = "1.0"
serde_json = "1.0.111"
# -- Other
derive_more = "0.99"
thiserror = "1.0"
anyhow = "1.0"
tonic = "0.10.2"
